gccida/g1/if_then_else_cond
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7649:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7661:4: error: expected ';' after expression
rtx last_value; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7661:5: error: use of undeclared identifier 'last_value'
rtx last_value; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7671:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v27; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7675:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v31; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7679:4: error: expected ';' after expression
rtx cond1; // [rsp+18h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7679:5: error: use of undeclared identifier 'cond1'
rtx cond1; // [rsp+18h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7682:4: error: expected ';' after expression
rtx false1; // [rsp+30h] [rbp-58h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7682:5: error: use of undeclared identifier 'false1'; did you mean 'pfalse'?
rtx false1; // [rsp+30h] [rbp-58h] BYREF 
    ^~~~~~
    pfalse
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7646:49: note: 'pfalse' declared here
rtx  if_then_else_cond( rtx x, rtx *ptrue, rtx *pfalse) 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7683:4: error: expected ';' after expression
rtx false0; // [rsp+38h] [rbp-50h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7683:5: error: use of undeclared identifier 'false0'; did you mean 'pfalse'?
rtx false0; // [rsp+38h] [rbp-50h] BYREF 
    ^~~~~~
    pfalse
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7646:49: note: 'pfalse' declared here
rtx  if_then_else_cond( rtx x, rtx *ptrue, rtx *pfalse) 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7684:4: error: expected ';' after expression
rtx true1; // [rsp+40h] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7684:5: error: use of undeclared identifier 'true1'
rtx true1; // [rsp+40h] [rbp-48h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7685:4: error: expected ';' after expression
rtx true0[8]; // [rsp+48h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7685:5: error: use of undeclared identifier 'true0'
rtx true0[8]; // [rsp+48h] [rbp-40h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7704:41: error: use of undeclared identifier 'true0'; did you mean 'ptrue'?
rtx = if_then_else_cond( x->fld[0].rtx, true0, &false0); 
                                        ^~~~~
                                        ptrue
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7646:37: note: 'ptrue' declared here
rtx  if_then_else_cond( rtx x, rtx *ptrue, rtx *pfalse) 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7704:49: error: use of undeclared identifier 'false0'; did you mean 'pfalse'?
rtx = if_then_else_cond( x->fld[0].rtx, true0, &false0); 
                                                ^~~~~~
                                                pfalse
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7646:49: note: 'pfalse' declared here
rtx  if_then_else_cond( rtx x, rtx *ptrue, rtx *pfalse) 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7713:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)v5, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/combine.c:7713:14: error: expected expression
( rtx_code)( unsigned __int16)v5, 
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_then_else_cond/src/obj/combine.o] Error 1
